[tool.poetry]
name = "lab-spellingbee"
version = "0.1.0"
description = ""
authors = ["emma <eqbrown@isf.edu.hk>"]
readme = "README.md"
packages = [{include = "lab_spellingbee"}]

[tool.poetry.dependencies]
python = "^3.8"
simple-term-menu = "^1.6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
