[tool.poetry]
name = "lab-spellingbee"
version = "0.1.0"
description = ""
authors = ["emma <eqbrown@isf.edu.hk>", "bgenzlinger@isf.edu.hk"]
readme = "README.md"
packages = [{include = "lab_spellingbee"}]

[tool.poetry.dependencies]
python = "^3.8"
inquirerpy = "^0.3.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
